<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Pi-Home</string>
    <string name="action_settings">Settings</string>

    <string name="menuItem1">Configure Led Pins</string>
    <string name="menuItem2">Configure Smart Switches</string>
    <string name="menuItem3">Video Streaming</string>
    <string name="menuItem4">Add PubNub Keys</string>
    <string name="title_activity_configure_led_pins">ConfigureLedPins</string>
    <string name="getStartedTxt">Get Started</string>
    <string name="action_previous">Previous</string>
    <string name="action_next">Next</string>
    <string name="action_finish">Finish</string>
    <string name="title_template_step1">Step <xliff:g id="step_number">%1$d</xliff:g>: Set the PubNub keys</string>
    <string name="title_template_step2">Step <xliff:g id="step_number">%1$d</xliff:g>: Configure the Smart Switch</string>
    <string name="title_template_step3">Step <xliff:g id="step_number">%1$d</xliff:g>: Schedule Devices to turn on/off based in time</string>
    <string name="title_template_step4">Step <xliff:g id="step_number">%1$d</xliff:g>: Configure Video Surveillance</string>
    <string name="title_template_step5">Step <xliff:g id="step_number">%1$d</xliff:g>: Motion Detection</string>
    <string name="title_template_step6">Step <xliff:g id="step_number">%1$d</xliff:g>: You are Ready to use Pi-Home</string>
    <string name="step1_details">"Log in to the PunNub account \nGet the Keys  \nAdd the keys in the Application"</string>
    <string name="step2_details">"Plugin the switch \nGet the IP Address \nAdd the switch in your Application"</string>
    <string name="step3_details">"Go to SmartSwitch \nSet time in the settings page \nDo not worry about turning on/off again \nApplication handles it for you"</string>
    <string name="step4_details">"Plug your webcam to your Raspberry pi \nTurnOn Video Status in the Pi-Home App \nWatch live videos from anywhere"</string>
    <string name="step5_details">"TurnOn Video Status in the Pi-Home App \nSet Phone Number to receive notification \nYour house is safe from intrusions"</string>
    <string name="step6_details">"Have an automated and secured home"</string>


    <string name="pin1">Pin 1 (RED)</string>
    <string name="pin2">Pin 2 (BLUE)</string>
    <string name="pin3">Pin 3 (GREEN)</string>

    <string name="textRed">RED</string>
    <string name="textBlue">BLUE</string>
    <string name="textGreen">GREEN</string>

    <string name="switchOn">ON</string>
    <string name="switchOff">OFF</string>
    <string name="default_msg"><u>USE DEFAULT</u></string>
    <string name="switchName">SWITCH  </string>
    <string name="title_activity_configure_wemo_switch">Configure Smart Switch</string>
    <string name="title_activity_wemo_settings">Smart Switch Settings</string>
    <string name="title_activity_video_streaming">VideoStreaming</string>
    <string name="title_activity_add_url_to_stream">AddUrlToStream</string>

    <string name="video_start">Start Video</string>
    <string name="video_stop">Stop Video</string>

    <string name="add_device_name">Device Name</string>
    <string name="add_device_IP">Device IP Address</string>
    <string name="saveBtnText">Save Device</string>
    <string name="cancelBtnText">Cancel</string>
    <string name="title_activity_get_started">getStartedActivity</string>
    <string name="title_activity_add_pubnub_keys">AddPubnubKeysActivity</string>

    <string name="publishKey">Publish Key:</string>
    <string name="subscribeKey">Subscribe Key:</string>
    <string name="saveKeysBtnText">Save Keys</string>
    <string name="title_activity_view_device_scheduler">ViewDeviceScheduler</string>

    <string name="videoUrl">http://pihomesjsu.dyndns.org:8090/stream.html</string>
    <string name="smsText">Motion Detected!!!  Please go to the below URL to see the Video: http://especsjsu.dyndns.org:8090/stream.html</string>

</resources>
