<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_configure_led_pins"
    tools:context="com.example.shruti.homeautomation.ConfigureLedPins">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/pin1"
        android:textSize="15dp"
        android:id="@+id/id_pin1" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/id_pin1Value"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:textSize="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/pin2"
        android:textSize="15dp"
        android:id="@+id/id_pin2" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/id_pin2Value"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="70dp"
        android:textSize="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:text="@string/pin3"
        android:textSize="15dp"
        android:id="@+id/id_pin3" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/id_pin3Value"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="120dp"
        android:textSize="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        android:text="@string/default_msg"
        android:textSize="15dp"
        android:clickable="true"
        android:onClick="useDefault"
        android:id="@+id/id_hyperlink" />


    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switch1"
        android:layout_below="@+id/id_pin3Value"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/switchName"
        android:thumbTextPadding="8dp"
        android:textOn="@string/switchOn"
        android:textOff="@string/switchOff"
        android:showText="true"
        android:textColor="#000000"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textRed"
        android:textSize="15dp"
        android:id="@+id/id_textRed"
        android:layout_alignParentStart="true"
        android:layout_marginTop="265dp"
        android:textColor="@color/red"
        android:textStyle="bold"/>

    <SeekBar
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/id_seekBarRed"
        android:layout_below="@+id/switch1"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:layout_toRightOf="@+id/id_textGreen"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textBlue"
        android:textSize="15dp"
        android:id="@+id/id_textBlue"
        android:layout_alignParentStart="true"
        android:layout_marginTop="315dp"
        android:textColor="@color/blue"
        android:textStyle="bold"/>

    <SeekBar
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:id="@+id/id_seekBarBlue"
        android:layout_below="@+id/switch1"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="80dp"
        android:layout_toRightOf="@+id/id_textGreen"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textGreen"
        android:textSize="15dp"
        android:id="@+id/id_textGreen"
        android:layout_alignParentStart="true"
        android:layout_marginTop="365dp"
        android:textColor="@color/green"
        android:textStyle="bold"/>

    <SeekBar
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:id="@+id/id_seekBarGreen"
        android:layout_below="@+id/switch1"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="130dp"
        android:layout_toRightOf="@+id/id_textGreen"/>




</RelativeLayout>
