<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:textSize="15dp"
            android:id="@+id/id_addDeviceName"
            android:text="@string/add_device_name"/>

        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/id_deviceNameTxt"
            android:layout_marginTop="50dp"
            android:layout_toRightOf="@+id/id_addDeviceIP"
            android:layout_marginLeft="20dp"
            android:textSize="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="130dp"
            android:layout_marginLeft="20dp"
            android:textSize="15dp"
            android:id="@+id/id_addDeviceIP"
            android:text="@string/add_device_IP"/>

        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/id_deviceIPTxt"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:textSize="15dp"
            android:layout_alignBottom="@+id/id_addDeviceIP"
            android:layout_toRightOf="@+id/id_addDeviceIP"/>


        <Button
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:id="@+id/id_saveDevice"
            android:layout_marginTop="250dp"
            android:layout_marginLeft="20dp"
            android:text="@string/saveBtnText"
            android:background="@color/btnBackground"
            android:textColor="@color/btnTextColor"
            android:textSize="@dimen/btnTextSize"/>

        <Button
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:id="@+id/id_cancelSaveDevice"
            android:layout_marginLeft="20dp"
            android:text="@string/cancelBtnText"
            android:layout_marginTop="250dp"
            android:layout_toRightOf="@+id/id_saveDevice"
            android:background="@color/btnBackground"
            android:textColor="@color/btnTextColor"
            android:textSize="@dimen/btnTextSize"/>

    </RelativeLayout>



</LinearLayout>